--- a/twp/twp.html
+++ b/twp/twp.html
@@ -59,58 +59,58 @@
 		<li>
 			<h3>Lego Instructions</h3>
 			
-			<img src="twp-images/lego-instructions.jpg" width="600px">
+			<img src="images/lego-instructions.jpg" width="600px">
 		
 		</li>
 		
 		<li>
 			<h3>Empty Cologne</h3>
 		
-			<img src="twp-images/jo-malone.jpg" width="600px">
+			<img src="images/jo-malone.jpg" width="600px">
 			
 		</li>
 		
 		<li>
 			<h3>Broken Chain</h3>
-			<img src="twp-images/broken-chain.jpg" width="600px">
+			<img src="images/broken-chain.jpg" width="600px">
 			
 		</li>
 		
 		<li>
 			<h3>Black Tie</h3>
 			
-			<img src="twp-images/black-tie.jpg" width="600px">
+			<img src="images/black-tie.jpg" width="600px">
 		</li>
 		
 		<li>
 			<h3>Broken Glasses</h3>
 			
-			<img src="twp-images/broken-glasses.jpg" width="600px">
+			<img src="images/broken-glasses.jpg" width="600px">
 			
 		</li>
 		
 		<li>
 			<h3>Broken Charger</h3>
 			
-			<img src="twp-images/broken-charger.jpg" width="600px">
+			<img src="images/broken-charger.jpg" width="600px">
 		</li>
 		
 		<li>
 			<h3>Old White T-Shirt</h3>
 			
-			<img src="twp-images/old-white-tshirt.jpg" width="600px">
+			<img src="images/old-white-tshirt.jpg" width="600px">
 		</li>
 		
 		<li>
 			<h3>Smiski</h3>
 			
-			<img src="twp-images/smiski.jpg" width="600px">
+			<img src="images/smiski.jpg" width="600px">
 		</li>
 		
 		<li>
 			<h3>Rubik's Cube</h3>
 			
-			<img src="twp-images/rubiks-cube.jpg" width="600px">
+			<img src="images/rubiks-cube.jpg" width="600px">
 		</li>
 	
 	</ol>
@@ -136,3 +136,4 @@
 	
 </body>
 </html>
+
