--- a/twp/espana-twp-profile.html
+++ b/twp/espana-twp-profile.html
@@ -5,50 +5,49 @@
 <meta charset="utf-8">
 <title>Trash of the Week - Profile | Week 10</title>
 	
-	<!--adding the css stuff 
-
-	selector{
-	rules
-	}	
-	-->
-	
-	<!--
-	<style>
-		h1{
-			color: red;
-			background: yellow;
-		}
-		
-		p{
-			color: green;
-			background: orange;
-			font-size: 60px;
-			line-height: 24px;
-		}
-	
-	</style>
-	-->
+	<link rel="stylesheet" href="twp.css" type="text/css">
 	
 </head>
 
 <body>
 	
+	<div class="wrapper">
+		
+	<header class="site-header">
+		
+		<nav class="site-nav">
+			<a href="twp.html">LATEST</a>
+			<a href="espana-twp-profile.html">PROFILE</a>
+			<a href="twp-archive.html">ARCHIVE</a>
+			<a href="twp-about.html">ABOUT</a>
+		</nav>
+		
+	</header>
+	
 	<h1>Item of the Week: Empty Cologne</h1>
 	
-	<h2>Description</h2>
+	<header class="nav-header">
+		<nav class="page-nav">
+			<a href="#sec-desc">Description</a> |
+			<a href="#sec-anec">Anecdote</a> |
+			<a href="#sec-fact">Fun Facts</a> 
+		</nav>
+	</header>
 	
-	<p>The item is a 30-ounce bottle of Jo Malone’s Wood Sage and Sea Salt cologne. The bottle is rectangular in shape and made of glass, with a shiny gold lid that, once removed, reveals the also gold atomizer nozzle. Its scent is earthy yet fresh, reminiscent of coastal air from the sea salt.</p> 
+	<h2 id="sec-desc">Description</h2>
+	
+	<p>The item is a 30-ounce bottle of Jo Malone’s <a href="https://www.wikiparfum.com/en/fragrances/wood-sage-sea-salt">Wood Sage and Sea Salt cologne</a>. The bottle is rectangular in shape and made of glass, with a shiny gold lid that, once removed, reveals the also gold atomizer nozzle. Its scent is earthy yet fresh, reminiscent of coastal air from the sea salt.</p> 
 	
 	<p>I was given the item as a gift by my friends when I moved into my junior-year apartment. I would spray my wrists twice, dabbing them together before pressing them onto my neck to spread the aroma.</p> 
 	
 	<p>There are still remnants of the cologne at the bottom of the container, but despite how many sprays, it will never be fully empty. I am choosing to get rid of it because I recently purchased a bigger bottle that will hopefully last me much longer than this one. I thought about keeping this bottle as a memento, but decided against it because I tend to hoard too many little trinkets.</p>
 	
 	<figure>
-		<img src="images/jo-bottle-600px.jpg">
+		<img src="profile-images/jo-bottle-600px.jpg">
 		<figcaption>Figure 1. Empty Jo Malone Bottle - Wood Sage and Sea Salt</figcaption>
 	</figure>
 	
-	<h2>Anecdote</h2>
+	<h2 id="sec-anec">Anecdote</h2>
 	
 	<p>It was nighttime in June of 2024, and I had just finished moving into my off-campus apartment here at Rutgers. My friend Michelle was going to sleep over since she was taking summer classes and had dance practice the next day.</p> 
 	
@@ -57,13 +56,13 @@
 	<p>We spent the rest of the night chatting about upcoming summer plans and what our next school year would look like.</p>
 	
 	<figure>
-		<img src="images/jo2-600px.jpg">
+		<img src="profile-images/jo2-600px.jpg">
 		<figcaption>Figure 2. Sketch of Jo Malone Bottle</figcaption>
 	</figure>
 	
 	<!--yap yap yap comments-->
 	
-	<h2>Fun Facts</h2>
+	<h2 id="sec-facts">Fun Facts</h2>
 	
 	<p>These facts provide background on the Jo Malone brand and its fragrances, highlighting the inspiration behind the scents, the brand’s approach to fragrance creation, and its history as a company. Together, they offer context for how the fragrance fits within the larger identity and development of Jo Malone London.</p>
 	
@@ -72,17 +71,19 @@
 	
 		<li><h3>Fact 1</h3>
 	
-		<p>According to the Jo Malone website, this unisex fragrance is meant to mimic the British coast, specifically the seaside and cliffs. It also uses ambrette seeds, which are highly fragrant and impart a musky aroma. This scent also comes in candle, hand soap/lotion, body cream, and oil diffuser form! (<a href= https://www.jomalone.com/scents/woody/wood-sage-sea-salt?gclsrc=aw.ds&&utm_term=go_cmp-20158809565_adg-_ad-__dev-c_ext-_prd-_mca-_sig-Cj0KCQiA1czLBhDhARIsAIEc7ujObBhrJb59rAZzbyh4RKIuy-B9w988m2Wc67Mo3pm2l1jSrQ0AzNUaAonXEALw_wcB&utm_source=google&utm_medium=cpc&gad_source=1&gad_campaignid=20155278458&gbraid=0AAAAADSEaCC1tTQeKcp1KzEnao7YbvGrZ&gclid=Cj0KCQiA1czLBhDhARIsAIEc7ujObBhrJb59rAZzbyh4RKIuy-B9w988m2Wc67Mo3pm2l1jSrQ0AzNUaAonXEALw_wcB>Jo Malone</a>)</p></li>
+		<p>According to the Jo Malone website, this unisex fragrance is meant to mimic the British coast, specifically the seaside and cliffs. It also uses ambrette seeds, which are highly fragrant and impart a musky aroma. This scent also comes in candle, hand soap/lotion, body cream, and oil diffuser form! (<a href= "https://www.jomalone.com/scents/woody/wood-sage-sea-salt?gclsrc=aw.ds&&utm_term=go_cmp-20158809565_adg-_ad-__dev-c_ext-_prd-_mca-_sig-Cj0KCQiA1czLBhDhARIsAIEc7ujObBhrJb59rAZzbyh4RKIuy-B9w988m2Wc67Mo3pm2l1jSrQ0AzNUaAonXEALw_wcB&utm_source=google&utm_medium=cpc&gad_source=1&gad_campaignid=20155278458&gbraid=0AAAAADSEaCC1tTQeKcp1KzEnao7YbvGrZ&gclid=Cj0KCQiA1czLBhDhARIsAIEc7ujObBhrJb59rAZzbyh4RKIuy-B9w988m2Wc67Mo3pm2l1jSrQ0AzNUaAonXEALw_wcB">Jo Malone</a>)</p></li>
 
 		<li><h3>Fact 2</h3>
 
-		<p>Jo Malone began with her first fragrance, Nutmeg and Ginger, as she enjoys mixing fragrances. She also creates these scents that are meant to be layered. For example, the Wood Sage and Sea Salt pairs well with Lime Basil and Mandarin for a fresher, aromatic pairing. (<a href = https://www.fragrantica.com/noses/Jo_Malone.html>Fragrantica</a>)</p></li>
+		<p>Jo Malone began with her first fragrance, Nutmeg and Ginger, as she enjoys mixing fragrances. She also creates these scents that are meant to be layered. For example, the Wood Sage and Sea Salt pairs well with Lime Basil and Mandarin for a fresher, aromatic pairing. (<a href = "https://www.fragrantica.com/noses/Jo_Malone.html">Fragrantica</a>)</p></li>
 
 		<li><h3>Fact 3</h3>
 
-		<p>Though founded in 1990, Jo Malone London was sold to Estee Lauder, in which Malone was prohibited from making new fragrances due to complications with her contract and agreements. (<a href = https://en.wikipedia.org/wiki/Jo_Malone_London>Wikipedia</a>)</p></li>
+		<p>Though founded in 1990, Jo Malone London was sold to Estee Lauder, in which Malone was prohibited from making new fragrances due to complications with her contract and agreements. (<a href = "https://en.wikipedia.org/wiki/Jo_Malone_London">Wikipedia</a>)</p></li>
 	</ul>
 	
+	  <p><a href="#">Back to Top</a></p>
+
+	</div>
 </body>
 </html>
-
