Fix HTML formatting and structure

--- a/twp/twp.html
+++ b/twp/twp.html
@@ -83,58 +83,58 @@
 		<li>
 			<h3>Lego Instructions</h3>
 			
-			<img src="twp-images/lego-instructions-300px.jpg">
+			<img src="images/lego-instructions-300px.jpg">
 		
 		</li>
 		
 		<li>
 			<h3>Empty Cologne</h3>
 		
-			<img src="twp-images/jo-malone-300px.jpg">
+			<img src="images/jo-malone-300px.jpg">
 			
 		</li>
 		
 		<li>
 			<h3>Broken Chain</h3>
-			<img src="twp-images/broken-chain-300px.jpg">
+			<img src="images/broken-chain-300px.jpg">
 			
 		</li>
 		
 		<li>
 			<h3>Black Tie</h3>
 			
-			<img src="twp-images/black-tie-300px.jpg">
+			<img src="images/black-tie-300px.jpg">
 		</li>
 		
 		<li>
 			<h3>Broken Glasses</h3>
 			
-			<img src="twp-images/broken-glasses-300px.jpg">
+			<img src="images/broken-glasses-300px.jpg">
 			
 		</li>
 		
 		<li>
 			<h3>Broken Charger</h3>
 			
-			<img src="twp-images/broken-charger-300px.jpg">
+			<img src="images/broken-charger-300px.jpg">
 		</li>
 		
 		<li>
 			<h3>Old White T-Shirt</h3>
 			
-			<img src="twp-images/old-white-tshirt.jpg">
+			<img src="images/old-white-tshirt.jpg">
 		</li>
 		
 		<li>
 			<h3>Smiski</h3>
 			
-			<img src="twp-images/smiski-300px.jpg">
+			<img src="images/smiski-300px.jpg">
 		</li>
 		
 		<li>
 			<h3>Rubik's Cube</h3>
 			
-			<img src="twp-images/rubiks-cube-300px.jpg">
+			<img src="images/rubiks-cube-300px.jpg">
 		</li>
 	
 	</ol>
@@ -261,3 +261,4 @@
 	
 </body>
 </html>
+
