Fix HTML formatting and update image paths

--- a/twp/espana-twp-profile.html
+++ b/twp/espana-twp-profile.html
@@ -43,7 +43,7 @@
 	<p>There are still remnants of the cologne at the bottom of the container, but despite how many sprays, it will never be fully empty. I am choosing to get rid of it because I recently purchased a bigger bottle that will hopefully last me much longer than this one. I thought about keeping this bottle as a memento, but decided against it because I tend to hoard too many little trinkets.</p>
 	
 	<figure>
-		<img src="profile-images/jo-bottle-600px.jpg">
+		<img src="images/jo-bottle-600px.jpg">
 		<figcaption>Figure 1. Empty Jo Malone Bottle - Wood Sage and Sea Salt</figcaption>
 	</figure>
 	
@@ -56,7 +56,7 @@
 	<p>We spent the rest of the night chatting about upcoming summer plans and what our next school year would look like.</p>
 	
 	<figure>
-		<img src="profile-images/jo2-600px.jpg">
+		<img src="images/jo2-600px.jpg">
 		<figcaption>Figure 2. Sketch of Jo Malone Bottle</figcaption>
 	</figure>
 	
@@ -87,3 +87,4 @@
 	</div>
 </body>
 </html>
+
