--- a/twp/espana-twp-profile.html
+++ b/twp/espana-twp-profile.html
@@ -6,6 +6,7 @@
 <title>Trash of the Week - Profile | Week 10</title>
 	
 	<link rel="stylesheet" href="twp.css" type="text/css">
+	<script src="https://kit.fontawesome.com/0b93d4a998.js" crossorigin="anonymous"></script>
 	
 </head>
 
@@ -14,6 +15,10 @@
 	<div class="wrapper">
 		
 	<header class="site-header">
+		<div class="brand">
+    		<i class="fa-solid fa-trash"></i>
+    		<h1>Bin There Done That</h1>
+  		</div>
 		
 		<nav class="site-nav">
 			<a href="twp.html">LATEST</a>
@@ -41,9 +46,11 @@
 	<p>I was given the item as a gift by my friends when I moved into my junior-year apartment. I would spray my wrists twice, dabbing them together before pressing them onto my neck to spread the aroma.</p> 
 	
 	<p>There are still remnants of the cologne at the bottom of the container, but despite how many sprays, it will never be fully empty. I am choosing to get rid of it because I recently purchased a bigger bottle that will hopefully last me much longer than this one. I thought about keeping this bottle as a memento, but decided against it because I tend to hoard too many little trinkets.</p>
+		
+	<p><a href="#">Back to top</a></p>
 	
 	<figure>
-		<img src="images/jo-bottle-600px.jpg">
+		<img src="profile-images/jo-bottle-600px.jpg">
 		<figcaption>Figure 1. Empty Jo Malone Bottle - Wood Sage and Sea Salt</figcaption>
 	</figure>
 	
@@ -56,11 +63,12 @@
 	<p>We spent the rest of the night chatting about upcoming summer plans and what our next school year would look like.</p>
 	
 	<figure>
-		<img src="images/jo2-600px.jpg">
+		<img src="profile-images/jo2-600px.jpg">
 		<figcaption>Figure 2. Sketch of Jo Malone Bottle</figcaption>
 	</figure>
 	
 	<!--yap yap yap comments-->
+	<p><a href="#">Back to top</a></p>
 	
 	<h2 id="sec-facts">Fun Facts</h2>
 	
@@ -87,4 +95,3 @@
 	</div>
 </body>
 </html>
-
