--- a/twp/twp.html
+++ b/twp/twp.html
@@ -5,6 +5,7 @@
 <title>Trash of the Week</title>
 	
 <link rel="stylesheet" href="twp.css" type="text/css">
+<script src="https://kit.fontawesome.com/0b93d4a998.js" crossorigin="anonymous"></script>
 	
 </head>
 
@@ -13,6 +14,10 @@
 	
 	<div class="hero">
 	<header class="site-header">
+		<div class="brand">
+    		<i class="fa-solid fa-trash"></i>
+    		<h1>Bin There Done That</h1>
+  		</div>
 		<!--<a href="index.html" class="site-logo"><img class="site-logo-image" src="images/site-logo.svg" alt="site logo for trash of the week project"></a>-->
 	
 		<nav class="site-nav">
@@ -79,65 +84,53 @@
 	
 	<h2 id="sec3">Trash of the Week Gallery</h2>
 	
-	<ol>
-		<li>
-			<h3>Lego Instructions</h3>
+		<div class="gallery-grid">
 			
-			<img src="images/lego-instructions-300px.jpg">
+			<div class="gallery-item">
+				<img src="twp-images/lego-instructions-300px.jpg" width="250px">
+				<h3>Lego Instructions</h3>
+			</div>
 		
-		</li>
-		
-		<li>
-			<h3>Empty Cologne</h3>
-		
-			<img src="images/jo-malone-300px.jpg">
+			<div class="gallery-item">
+				<img src="twp-images/jo-malone-300px.jpg" width="250px">
+				<h3>Empty Cologne</h3>
+			</div>
 			
-		</li>
+			<div class="gallery-item">
+				<img src="twp-images/broken-chain-300px.jpg" width="250px">
+				<h3>Broken Chain</h3>
+			</div>
+			
+			<div class="gallery-item">
+				<img src="twp-images/black-tie-300px.jpg" width="250px">
+				<h3>Black Tie</h3>
+			</div>
+
+			<div class="gallery-item">
+				<img src="twp-images/broken-glasses-300px.jpg" width="250px">
+				<h3>Broken Glasses</h3>
+			</div>
+			
+			<div class="gallery-item">
+				<img src="twp-images/broken-charger-300px.jpg" width="250px">
+				<h3>Broken Charger</h3>
+			</div>
 		
-		<li>
-			<h3>Broken Chain</h3>
-			<img src="images/broken-chain-300px.jpg">
-			
-		</li>
+			<div class="gallery-item">
+				<img src="twp-images/old-white-tshirt-300px.jpg" width="250px">
+				<h3>Old White T-Shirt</h3>
+			</div>
 		
-		<li>
-			<h3>Black Tie</h3>
-			
-			<img src="images/black-tie-300px.jpg">
-		</li>
-		
-		<li>
-			<h3>Broken Glasses</h3>
-			
-			<img src="images/broken-glasses-300px.jpg">
-			
-		</li>
-		
-		<li>
-			<h3>Broken Charger</h3>
-			
-			<img src="images/broken-charger-300px.jpg">
-		</li>
-		
-		<li>
-			<h3>Old White T-Shirt</h3>
-			
-			<img src="images/old-white-tshirt.jpg">
-		</li>
-		
-		<li>
-			<h3>Smiski</h3>
-			
-			<img src="images/smiski-300px.jpg">
-		</li>
-		
-		<li>
-			<h3>Rubik's Cube</h3>
-			
-			<img src="images/rubiks-cube-300px.jpg">
-		</li>
+			<div class="gallery-item">
+				<img src="twp-images/smiski-300px.jpg" width="250px">
+				<h3>Smiski</h3>
+			</div>
 	
-	</ol>
+			<div class="gallery-item">
+				<img src="twp-images/rubiks-cube-300px.jpg" width="250px">
+				<h3>Rubik's Cube</h3>
+			</div>
+		</div>
 	
 	<h2>Item Table</h2>
 	
@@ -162,7 +155,7 @@
 		  <td>Bedroom</td>
 		  <td>$$</td>
 		  <td>6 months</td>
-		  <td>Recycling</td>
+		  <td><i class="fa-solid fa-recycle"></i></td>
 		  <td>Low</td>
 		</tr>
 		<tr>
@@ -172,7 +165,7 @@
 		  <td>Bathroom</td>
 		  <td>$$$</td>
 		  <td>1 year</td>
-		  <td>Recycling</td>
+		  <td><i class="fa-solid fa-recycle"></i></td>
 		  <td>Mid</td>
 		</tr>
 		<tr>
@@ -182,7 +175,7 @@
 		  <td>Bedroom</td>
 		  <td>$</td>
 		  <td>4 years</td>
-		  <td>Garbage</td>
+		  <td><i class="fa-solid fa-trash"></i></td>
 		  <td>Low</td>
 		</tr>
 		<tr>
@@ -192,7 +185,7 @@
 		  <td>Closet</td>
 		  <td>$</td>
 		  <td>6 years</td>
-		  <td>Donation</td>
+		  <td><i class="fa-solid fa-hand-holding"></i></td>
 		  <td>Mid</td>
 		</tr>
 		<tr>
@@ -202,7 +195,7 @@
 		  <td>Desk</td>
 		  <td>$$</td>
 		  <td>5 years</td>
-		  <td>Garbage</td>
+		  <td><i class="fa-solid fa-trash"></i></td>
 		  <td>Mid</td>
 		</tr>
 		<tr>
@@ -212,7 +205,7 @@
 		  <td>Living Room</td>
 		  <td>$</td>
 		  <td>2 months</td>
-		  <td>Garbage</td>
+		  <td><i class="fa-solid fa-trash"></i></td>
 		  <td>Low</td>
 		</tr>
 		<tr>
@@ -222,7 +215,7 @@
 		  <td>Closet</td>
 		  <td>$</td>
 		  <td>3 years</td>
-		  <td>Donation</td>
+		  <td><i class="fa-solid fa-hand-holding"></i></td>
 		  <td>Low</td>
 		</tr>
 		<tr>
@@ -232,7 +225,7 @@
 		  <td>Desk</td>
 		  <td>$</td>
 		  <td>2 years</td>
-		  <td>Sold</td>
+		  <td><i class="fa-solid fa-money-bill"></i></td>
 		  <td>Mid</td>
 		</tr>
 		<tr>
@@ -242,11 +235,20 @@
 		  <td>Bedroom</td>
 		  <td>$</td>
 		  <td>1 year</td>
-		  <td>Donation</td>
+		  <td><i class="fa-solid fa-hand-holding"></i></td>
 		  <td>High</td>
 		</tr>
 	  </tbody>
 	</table>
+	
+	<h3>Key</h3>
+		
+		<div class="key">
+		<i class="fa-solid fa-trash"></i><p>= Garbaged</p>
+		<i class="fa-solid fa-money-bill"></i> <p>= Sold</p>
+		<i class="fa-solid fa-hand-holding"></i><p>= Donated</p>
+		<i class="fa-solid fa-recycle"></i><p>= Recycled</p>
+		</div>
 	
 	<p><a href="#">Back to top</a></p>
 	
@@ -261,4 +263,3 @@
 	
 </body>
 </html>
-
