Fix HTML formatting and structure

--- a/twp/twp.html
+++ b/twp/twp.html
@@ -87,47 +87,47 @@
 		<div class="gallery-grid">
 			
 			<div class="gallery-item">
-				<img src="twp-images/lego-instructions-300px.jpg" width="250px">
+				<img src="images/lego-instructions-300px.jpg" width="250px">
 				<h3>Lego Instructions</h3>
 			</div>
 		
 			<div class="gallery-item">
-				<img src="twp-images/jo-malone-300px.jpg" width="250px">
+				<img src="images/jo-malone-300px.jpg" width="250px">
 				<h3>Empty Cologne</h3>
 			</div>
 			
 			<div class="gallery-item">
-				<img src="twp-images/broken-chain-300px.jpg" width="250px">
+				<img src="images/broken-chain-300px.jpg" width="250px">
 				<h3>Broken Chain</h3>
 			</div>
 			
 			<div class="gallery-item">
-				<img src="twp-images/black-tie-300px.jpg" width="250px">
+				<img src="images/black-tie-300px.jpg" width="250px">
 				<h3>Black Tie</h3>
 			</div>
 
 			<div class="gallery-item">
-				<img src="twp-images/broken-glasses-300px.jpg" width="250px">
+				<img src="images/broken-glasses-300px.jpg" width="250px">
 				<h3>Broken Glasses</h3>
 			</div>
 			
 			<div class="gallery-item">
-				<img src="twp-images/broken-charger-300px.jpg" width="250px">
+				<img src="images/broken-charger-300px.jpg" width="250px">
 				<h3>Broken Charger</h3>
 			</div>
 		
 			<div class="gallery-item">
-				<img src="twp-images/old-white-tshirt-300px.jpg" width="250px">
+				<img src="images/old-white-tshirt-300px.jpg" width="250px">
 				<h3>Old White T-Shirt</h3>
 			</div>
 		
 			<div class="gallery-item">
-				<img src="twp-images/smiski-300px.jpg" width="250px">
+				<img src="images/smiski-300px.jpg" width="250px">
 				<h3>Smiski</h3>
 			</div>
 	
 			<div class="gallery-item">
-				<img src="twp-images/rubiks-cube-300px.jpg" width="250px">
+				<img src="images/rubiks-cube-300px.jpg" width="250px">
 				<h3>Rubik's Cube</h3>
 			</div>
 		</div>
@@ -263,3 +263,4 @@
 	
 </body>
 </html>
+
