Fix HTML formatting and update image paths

--- a/twp/espana-twp-profile.html
+++ b/twp/espana-twp-profile.html
@@ -50,7 +50,7 @@
 	<p><a href="#">Back to top</a></p>
 	
 	<figure>
-		<img src="profile-images/jo-bottle-600px.jpg">
+		<img src="images/jo-bottle-600px.jpg">
 		<figcaption>Figure 1. Empty Jo Malone Bottle - Wood Sage and Sea Salt</figcaption>
 	</figure>
 	
@@ -63,7 +63,7 @@
 	<p>We spent the rest of the night chatting about upcoming summer plans and what our next school year would look like.</p>
 	
 	<figure>
-		<img src="profile-images/jo2-600px.jpg">
+		<img src="images/jo2-600px.jpg">
 		<figcaption>Figure 2. Sketch of Jo Malone Bottle</figcaption>
 	</figure>
 	
@@ -95,3 +95,4 @@
 	</div>
 </body>
 </html>
+
